@@ -93,6 +93,12 @@ task functional(type: Test, description: 'Runs the functional tests.', group: 'V
   maxHeapSize = '1G'
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 // before committing a change, make sure task still works
 dependencyUpdates {
   def isNonStable = { String version ->
@@ -149,17 +155,18 @@ def versions = [
 dependencies {
   implementation 'com.github.hmcts:ecm-common:0.1.134'
 
+
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-actuator'
   implementation 'org.springframework.boot:spring-boot-configuration-processor'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.retry:spring-retry'
 
-  implementation 'org.postgresql:postgresql:42.2.22'
+  implementation 'org.postgresql:postgresql:42.2.23'
 
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
   implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
-  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.10.1'
+  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.11.3'
   implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
   implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
   implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.21'
@@ -201,6 +208,7 @@ dependencies {
   testImplementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
   testImplementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
   testImplementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
+  testImplementation 'com.github.hmcts:fortify-client:1.2.0:all'
 
   testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity, {
@@ -225,3 +233,4 @@ bootJar {
 wrapper {
   distributionType = Wrapper.DistributionType.ALL
 }
+
